# toy-dns-server

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix  nixos-test.nix  taplo.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  zone_config.rs
src/packet/: answer.rs  dns_name.rs  error.rs  header.rs  mod.rs  protocol_class.rs  question.rs  record_type.rs
tests/: example_query.rs  example_zone.yaml  integration_test.rs
