[package]
name = "toy-dns-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "toy-dns-server"
path = "src/main.rs"

[dependencies]
bytes = "1.9"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
