[package]
name = "toy-dns-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "toy-dns-server"
path = "src/main.rs"

[dependencies]
bytes = "1.9"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
  "time",
  "process",
] }

[dev-dependencies]
libc = "0.2"
